fixed spacing of cover image

--- a/static/less/style.less
+++ b/static/less/style.less
@@ -99,7 +99,7 @@ header.banner {
       line-height:40px;
       margin-left:10px;
       color:@brand-primary;
-      
+
     }
   }
   .banner-nav {
@@ -150,8 +150,7 @@ section.home {
 }
 
 .home-title {
-  height:75%;
-  min-height:450px;
+  min-height:468px;
   max-height:625px;
   @media (min-width: @screen-lg-min) {
     max-height:800px;
@@ -163,7 +162,6 @@ section.home {
   h1 {
     color: #fff;
     opacity:0.9;
-    margin-top:3%;
     text-align:center;
     margin-bottom:40px;
     font-size:64px;
@@ -195,8 +193,9 @@ section.home {
   }
 }
 
-.home-about {
+section.home.home-about {
   width:100%;
+  margin-top:50px;
   .lead {
     font-size:24px;
     margin-bottom:50px;
@@ -284,4 +283,3 @@ section.home {
     text-decoration:none;
   }
 }
-
